# rest_polls_app

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
main/: settings.py  urls.py
polls/: admin.py  apiviews.py  models.py  serializers.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
